fix right nav covers

--- a/app/stylesheets/partials/_layout.sass
+++ b/app/stylesheets/partials/_layout.sass
@@ -282,12 +282,18 @@ a.highlight
     font-family: Helvetica
     &:hover
       :cursor pointer
-    img
-      margin-bottom: 0px
-    span.kind
-      font-size: 10px
-      color: #999
+    .cover
+      float: none
+      height: auto
+      img
+        margin-bottom: 0px
+        float: none
+      .text
+        float: none
+        margin-top: 0px
+
     .links
+      margin-top: 50px
       a
         cursor: pointer
         
